Fixed center alignment

--- a/css/jeroenslor.css
+++ b/css/jeroenslor.css
@@ -136,6 +136,7 @@ section#about {
 #portfolio .portfolio-item .portfolio-link
 {
     display: block;
+    margin: 0 auto;
 	max-width: 400px;
     min-height: 212px;
 	position: relative;
